-
Bug
-
Resolution: Fixed
-
P2: Important
-
Qt Creator 12.0.0-beta1
-
None
-
-
4645c713d (12.0)
Linux Ubuntu 22.04
Steps:
- Install Qt Creator 12.0.0-beta1
- Install Boot2Qt 6.6.0 toolchain
- Select any example and try to run it on the device
Actual: The application could not be deployed, error appears:
rsync failed with exit code 3
It works well after retry and does not happen with Qt Creator 11.0.3
Expected: The application could run.
- relates to
-
QTQAINFRA-5799
Qt Test Attack - Q3, 2023
-
- Open
-
| For Gerrit Dashboard: QTCREATORBUG-29609 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 513630,2 | GenericDeployStep: Fix rsync step | 12.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |